<resources>
    <string name="app_name">Weather Forecast</string>

    <string name="channel_id">WF_CHANNEL_ID</string>
    <string name="channel_name">WF_CHANNEL</string>

    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Current Weather</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="temp">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="today">Today</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="settings_fragment_label">Settings</string>
    <string name="action_upcomings">Upcomings</string>


    <string name="open_weather_img_url">http://openweathermap.org/img/w/%s.png</string>
</resources>