<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/CurrentWeatherFragment">

    <fragment
        android:id="@+id/CurrentWeatherFragment"
        android:name="com.example.weatherforecast.presentation.current.CurrentWeatherFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_current_weather">

        <action
            android:id="@+id/action_CurrentWeatherFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_CurrentWeatherFragment_to_upcomingsFragment"
            app:destination="@id/upcomingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.setting.SettingsFragment"
        android:label="@string/settings_fragment_label" />
    <fragment
        android:id="@+id/upcomingsFragment"
        android:name="com.example.upcomings.presentation.UpcomingsFragment"
        android:label="@string/action_upcomings" />
</navigation>